--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,6 +58,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 25%;
     transition: background 0.3s ease; /* Transisi halus saat hover */
 }
 
@@ -107,4 +108,14 @@
     height: 30px;
     background-color: #fff;
     border-radius: 50%;
+}
+
+/* Mengubah kursor menjadi pointer saat hover pada kolom Grade */
+#datatable td.grade-column {
+    cursor: pointer; /* Kursor berubah menjadi pointer */
+}
+
+/* CSS untuk memusatkan teks di dalam sel tabel */
+.table td, .table th {
+    text-align: center; /* Memusatkan teks di dalam sel tabel */
 }
